feat: part4+. ch3 Compose 실무 활용 // 영화 정보 앱 // apply theme to component

--- a/part4/chatper5/MovieApp/.gitignore
+++ b/part4/chatper5/MovieApp/.gitignore
@@ -8,6 +8,8 @@
 /.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
 /.idea/git_toolbox_prj.xml
+/.idea/gradle.xml
+/.idea/Project_Default.xml
 .DS_Store
 /build
 /captures
