--- a/part4/chatper5/MovieApp/.gitignore
+++ b/part4/chatper5/MovieApp/.gitignore
@@ -1,15 +1,15 @@
 *.iml
 .gradle
-/local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
-/.idea/git_toolbox_prj.xml
-/.idea/gradle.xml
-/.idea/Project_Default.xml
+**/local.properties
+**/.idea/caches
+**/.idea/libraries
+**/.idea/modules.xml
+**/.idea/workspace.xml
+**/.idea/navEditor.xml
+**/.idea/assetWizardSettings.xml
+**/.idea/git_toolbox_prj.xml
+**/.idea/gradle.xml
+**/.idea/Project_Default.xml
 .DS_Store
 /build
 /captures
