feat: part4+. ch3 Compose 실무 활용 // 영화 정보 앱 // 피드 화면 생성 (FeedScreen)

--- a/part4/chatper5/MovieApp/gradle/libs.versions.toml
+++ b/part4/chatper5/MovieApp/gradle/libs.versions.toml
@@ -13,11 +13,11 @@ navigation = "2.5.3"
 compose = "1.3.2"
 accompanist = "0.28.0"
 hilt = "2.51.1"
-hiltNavigation = "1.0.0"
+hiltNavigation = "1.2.0"
 retrofit = "2.9.0"
 okhttp3LoggingInterceptor = "5.0.0-alpha.2"
 gson = "2.10.1"
-coil = "2.2.0"
+coil = "3.0.4"
 timber = "5.0.1"
 appcompat = "1.7.0"
 
@@ -53,11 +53,12 @@ retrofit-adapter-rxjava2 = { group = "com.squareup.retrofit2", name = "adapter-r
 gson = { group = "com.google.code.gson", name = "gson", version.ref = "gson" }
 
 # Coil
-coil = { group = "io.coil-kt.coil3", name = "coil", version.ref = "coil" }
+coil-compose = { group = "io.coil-kt.coil3", name = "coil-compose", version.ref = "coil" }
+coil-network-okhttp = { group = "io.coil-kt.coil3", name = "coil-network-okhttp", version.ref = "coil" }
 
 # Hilt
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
-hilt-android-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt" }
+hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "hilt" }
 hilt-navigation = { group = "androidx.hilt", name = "hilt-navigation-fragment", version.ref = "hiltNavigation" }
 
 #Timber
